# docs/api/openapi.json
@@ -430,75 +430,6 @@
   },
   "openapi": "3.0.0",
   "paths": {
-    "/api": {
-      "get": {
-        "summary": "Documentation UI",
-        "description": "Displays the OpenAPI documentation UI.",
-        "tags": [
-          "OpenAPI"
-        ],
-        "responses": {
-          "default": {
-            "description": "The documentation UI",
-            "content": {
-              "text/html": {
-                "schema": {
-                  "type": "string"
-                }
-              }
-            }
-          }
-        },
-        "parameters": [],
-        "security": []
-      }
-    },
-    "/api.json": {
-      "get": {
-        "summary": "JSON Documentation",
-        "description": "Returns the OpenAPI documentation in JSON format.",
-        "tags": [
-          "OpenAPI"
-        ],
-        "responses": {
-          "default": {
-            "description": "The documentation in JSON format",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "string"
-                }
-              }
-            }
-          }
-        },
-        "parameters": [],
-        "security": []
-      }
-    },
-    "/api.yaml": {
-      "get": {
-        "summary": "YAML Documentation",
-        "description": "Returns the OpenAPI documentation in YAML format.",
-        "tags": [
-          "OpenAPI"
-        ],
-        "responses": {
-          "default": {
-            "description": "The documentation in YAML format",
-            "content": {
-              "application/yaml": {
-                "schema": {
-                  "type": "string"
-                }
-              }
-            }
-          }
-        },
-        "parameters": [],
-        "security": []
-      }
-    },
     "/api/v1/auth/signup": {
       "post": {
         "summary": "Dar de alta una cuenta y abrir sesión",
